--- a/package.json
+++ b/package.json
@@ -1,34 +1,9 @@
 {
   "name": "electron-react-webpack-boilerplate",
-  "version": "1.13.0",
-  "description": "Minimal Electron, React, PostCSS and Webpack boilerplate to help you get started with building your next app.",
+  "version": "2.0.0",
+  "description": "Minimal Electron, React and Webpack boilerplate",
   "license": "MIT",
   "private": false,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/alexdevero/electron-react-webpack-boilerplate.git"
-  },
-  "homepage": "",
-  "bugs": {
-    "url": "https://github.com/alexdevero/electron-react-webpack-boilerplate/issues"
-  },
-  "author": {
-    "name": "Alex Devero",
-    "email": "deveroalex@gmail.com",
-    "url": "https://github.com/alexdevero"
-  },
-  "keywords": [
-    "app",
-    "boilerplate",
-    "electron",
-    "open",
-    "open-source",
-    "postcss",
-    "react",
-    "reactjs",
-    "source",
-    "webpack"
-  ],
   "engines": {
     "node": ">=9.0.0",
     "npm": ">=5.0.0",
@@ -43,10 +18,9 @@
     "start": "cross-env NODE_ENV=development webpack serve --hot --host 0.0.0.0 --config=./webpack.dev.config.js --mode development",
     "build": "cross-env NODE_ENV=production webpack --config webpack.build.config.js --mode production",
     "package": "npm run build",
-    "postpackage": "electron-packager ./ --out=./builds"
+    "postpackage": "electron-packager ./ --out=./builds --overwrite"
   },
   "dependencies": {
-    "postcss": "^8.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -60,17 +34,27 @@
     "electron": "^10.1.5",
     "electron-devtools-installer": "^3.1.1",
     "electron-packager": "^15.1.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-react": "^7.21.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
     "mini-css-extract-plugin": "^1.2.1",
-    "postcss-import": "^13.0.0",
-    "postcss-loader": "^4.0.4",
-    "postcss-nested": "^5.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-pxtorem": "^5.1.1",
+    "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.3.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
